--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,13 @@ body {
     background-color: rgba(114, 108, 77, 0);
     width: 100vw;
     height: 100vh;
+    margin: 0;
+    overflow: hidden;
 }
 
 #game {
     object-fit: contain;
     width: 100%;
     height: 100%;
+    margin: 0;
 }
